# server/src/main/java/fr/finanting/server/controller/BankingAccountController.java
@@ -1,22 +1,21 @@
 package fr.finanting.server.controller;
 
-import fr.finanting.server.dto.BankingAccountDTO;
-import fr.finanting.server.exception.*;
-import fr.finanting.server.parameter.CreateBankingAccountParameter;
-import fr.finanting.server.parameter.DeleteBankingAccountParameter;
-import fr.finanting.server.parameter.UpdateBankingAccountParameter;
-import fr.finanting.server.security.UserDetailsImpl;
+import fr.finanting.server.codegen.api.BankingAccountApi;
+import fr.finanting.server.codegen.model.BankingAccountDTO;
+import fr.finanting.server.codegen.model.BankingAccountParameter;
+import fr.finanting.server.codegen.model.UpdateBankingAccountParameter;
 import fr.finanting.server.service.BankingAccountService;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.Authentication;
-import org.springframework.web.bind.annotation.*;
-
 @RestController
 @RequestMapping("bankingAccount")
-public class BankingAccountController {
+public class BankingAccountController extends MotherController implements BankingAccountApi {
 
     private final BankingAccountService bankingAccountService;
 
@@ -25,6 +24,42 @@ public class BankingAccountController {
         this.bankingAccountService = bankingAccountService;
     }
 
+    @Override
+    public ResponseEntity<BankingAccountDTO> createBankingAccount(BankingAccountParameter body) {
+        String userName = this.getCurrentPrincipalName();
+        BankingAccountDTO bankingAccountDTO = this.bankingAccountService.createAccount(body, userName);
+        return new ResponseEntity<>(bankingAccountDTO, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteBankingAccount(Integer bankingAccountId) {
+        String userName = this.getCurrentPrincipalName();
+        this.bankingAccountService.deleteAccount(bankingAccountId, userName);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<BankingAccountDTO>> getGroupBankingAccounts(Integer groupId) {
+        String userName = this.getCurrentPrincipalName();
+        List<BankingAccountDTO> bankingAccountDTOList = this.bankingAccountService.getGroupBankingAccounts(groupId, userName);
+        return new ResponseEntity<>(bankingAccountDTOList, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<List<BankingAccountDTO>> getUserBankingAccounts() {
+        String userName = this.getCurrentPrincipalName();
+        List<BankingAccountDTO> bankingAccountDTOList = this.bankingAccountService.getUserBankingAccounts(userName);
+        return new ResponseEntity<>(bankingAccountDTOList, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<BankingAccountDTO> updateBankingAccount(Integer bankingAccountId, UpdateBankingAccountParameter body) {
+        String userName = this.getCurrentPrincipalName();
+        BankingAccountDTO bankingAccountDTO = this.bankingAccountService.updateAccount(bankingAccountId, body, userName);
+        return new ResponseEntity<>(bankingAccountDTO, HttpStatus.CREATED);
+    }
+
+    /*
     @PostMapping("/updateAccount")
     public BankingAccountDTO updateAccount(final Authentication authentication,
                                     @RequestBody final UpdateBankingAccountParameter updateBankingAccountParameter)
@@ -64,5 +99,6 @@ public class BankingAccountController {
         return this.bankingAccountService.getBankingAccount(id, userDetailsImpl.getUsername());
     }
 
+     */
 
 }
